add_subdirectory(widget)
target_sources(MPax PRIVATE systemtrayicon.h systemtrayicon.cpp)
target_sources(MPax PRIVATE progressdialog.h progressdialog.cpp progressdialog.ui)
target_sources(MPax PRIVATE audioinfodialog.h audioinfodialog.cpp audioinfodialog.ui)
target_sources(MPax PRIVATE playlistwidget.h playlistwidget.cpp playlistwidget.ui)
target_sources(MPax PRIVATE listtabwidget.h listtabwidget.cpp listtabwidget.ui)
target_sources(MPax PRIVATE playcontrolwidget.h playcontrolwidget.cpp playcontrolwidget.ui)
target_sources(MPax PRIVATE playlistsearchdialog.h playlistsearchdialog.cpp playlistsearchdialog.ui)
target_sources(MPax PRIVATE aboutdialog.h aboutdialog.cpp aboutdialog.ui)
target_sources(MPax PRIVATE mainui.h mainui.cpp mainui.ui)
